Update tire categories in sizes.html for improved clarity and organization

--- a/pages/sizes.html
+++ b/pages/sizes.html
@@ -232,55 +232,26 @@
 
 					<li>
 						<a
-							href="#winter"
-							class="inline-flex items-center gap-2 rounded-full border border-neutral-200 px-5 sm:px-6 md:px-7 py-2.5 md:py-3 text-sm sm:text-base md:text-lg font-medium text-neutral-700 bg-white shadow-sm hover:shadow-md hover:-translate-y-0.5 transition"
-						>
-							<!-- icono -->
-							<span class="i-lucide-snowflake"></span>
-							Winter
-							<!-- badge -->
-							<span
-								class="ml-1 inline-flex h-6 min-w-6 items-center justify-center rounded-full bg-purple-600/10 text-purple-700 text-sm font-semibold px-2"
-								>4</span
-							>
-						</a>
-					</li>
-
-					<li>
-						<a
-							href="#passenger"
+							href="#passenger-suv"
 							class="inline-flex items-center gap-2 rounded-full border border-neutral-200 px-5 sm:px-6 md:px-7 py-2.5 md:py-3 text-sm sm:text-base md:text-lg font-medium text-neutral-700 bg-white shadow-sm hover:shadow-md hover:-translate-y-0.5 transition"
 						>
 							<span class="i-lucide-car"></span>
-							Passenger
-							<span
-								class="ml-1 inline-flex h-6 min-w-6 items-center justify-center rounded-full bg-purple-600/10 text-purple-700 text-sm font-semibold px-2"
-								>3</span
-							>
-						</a>
-					</li>
-
-					<li>
-						<a
-							href="#suv"
-							class="inline-flex items-center gap-2 rounded-full border border-neutral-200 px-5 sm:px-6 md:px-7 py-2.5 md:py-3 text-sm sm:text-base md:text-lg font-medium text-neutral-700 bg-white shadow-sm hover:shadow-md hover:-translate-y-0.5 transition"
-						>
 							<span class="i-lucide-truck"></span>
-							SUV/Light Truck
+							PASSENGER / SUV &amp; LT
 							<span
 								class="ml-1 inline-flex h-6 min-w-6 items-center justify-center rounded-full bg-purple-600/10 text-purple-700 text-sm font-semibold px-2"
-								>5</span
+								>8</span
 							>
 						</a>
 					</li>
 
 					<li>
 						<a
-							href="#commercial"
+							href="#tbr"
 							class="inline-flex items-center gap-2 rounded-full border border-neutral-200 px-5 sm:px-6 md:px-7 py-2.5 md:py-3 text-sm sm:text-base md:text-lg font-medium text-neutral-700 bg-white shadow-sm hover:shadow-md hover:-translate-y-0.5 transition"
 						>
 							<span class="i-lucide-bus"></span>
-							Commercial LT
+							TBR / TRUCK &amp; BUS
 							<span
 								class="ml-1 inline-flex h-6 min-w-6 items-center justify-center rounded-full bg-purple-600/10 text-purple-700 text-sm font-semibold px-2"
 								>2</span
