Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 							preload="none"
 							data-video
 						>
-							<source src="assets/video/tire_grip.mp4" type="video/mp4" />
+							<source src="assets/video/tire_grip.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
 
@@ -276,7 +276,7 @@
 							preload="none"
 							data-video
 						>
-							<source src="assets/video/truck.mp4" type="video/mp4" />
+							<source src="assets/video/truck.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
 
@@ -325,8 +325,8 @@
 							data-video
 						>
 							<source
-								src="assets/img/A_rugged_offroad_202509271235.mp4"
-								type="video/mp4"
+								src="assets/video/A_rugged_offroad_202509271235.webm"
+								type="video/webm"
 							/>
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
@@ -376,8 +376,8 @@
 							data-video
 						>
 							<source
-								src="assets/img/SUV_en_Montañas_Nevadas_Estilo_Documental.mp4"
-								type="video/mp4"
+								src="assets/video/SUV_en_Montañas_Nevadas_Estilo_Documental.webm"
+								type="video/webm"
 							/>
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
@@ -427,8 +427,8 @@
 							data-video
 						>
 							<source
-								src="assets/img/Vídeo_Promocional_Todoterreno_Estilo_Halftone.mp4"
-								type="video/mp4"
+								src="assets/video/Vídeo_Promocional_Todoterreno_Estilo_Halftone.webm"
+								type="video/webm"
 							/>
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
@@ -477,7 +477,7 @@
 							preload="none"
 							data-video
 						>
-							<source src="assets/video/box.mp4" type="video/mp4" />
+							<source src="assets/video/box.webm" type="video/webm" />
 							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
 						</video>
 
@@ -1360,35 +1360,6 @@
 										<option value="remote">Remote</option>
 									</select>
 								</label>
-								<label class="text-xs text-white/70"
-									>Tipo
-									<select
-										id="fType"
-										class="mt-1 w-full bg-white/95 text-neutral-800 rounded-md px-3 py-2"
-									>
-										<option value="">Todos</option>
-										<option value="fulltime">Full-time</option>
-										<option value="contract">Contract</option>
-										<option value="intern">Intern</option>
-									</select>
-								</label>
-								<div class="flex items-end">
-									<button
-										class="w-full inline-flex items-center justify-center gap-2 px-4 py-2 rounded-md font-extrabold"
-										style="
-											background: var(--accent);
-											box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
-
-											color: white;
-										"
-									>
-										Search
-										<span
-											class="inline-grid place-items-center w-6 h-6 rounded-full border border-black/20"
-											>➜</span
-										>
-									</button>
-								</div>
 							</div>
 							<div class="mt-3 flex flex-wrap gap-2">
 								<span class="chip" data-tag="new">New</span>
@@ -2099,7 +2070,7 @@
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
-							<span class="f-chip">Since 1998</span>
+							<span class="f-chip"> </span>
 						</div>
 						<p class="text-white/70 text-sm mt-3 max-w-md">
 							Engineering, safety, and performance for every mile. MX & USA with
