--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -502,7 +502,7 @@
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
-							<span class="f-chip">Since 1998</span>
+							<span class="f-chip"> </span>
 						</div>
 						<p class="text-white/70 text-sm mt-3 max-w-md">
 							Engineering, safety, and performance for every mile. MX & USA with
