--- a/pages/sizes.html
+++ b/pages/sizes.html
@@ -142,27 +142,27 @@
 					class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-x-12 gap-y-4 justify-items-center font-semibold tracking-wide uppercase text-sm pb-4"
 				>
 					<a
-						href="#why-landscape-strength"
+						href="../index.html#why-landscape-strength"
 						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
 						>Find Your Perfect Tire</a
 					>
 					<a
-						href="#tire-lineup"
+						href="../index.html#tire-lineup"
 						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
 						>Tire Lineup</a
 					>
 					<a
-						href="#about-us"
+						href="../index.html#about-us"
 						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
 						>Why Landscape</a
 					>
 					<a
-						href="#corporate-news"
+						href="../index.html#corporate-news"
 						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
 						>News</a
 					>
 					<a
-						href="#recruitment"
+						href="../index.html#recruitment"
 						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
 						>Join Landscape</a
 					>
@@ -566,7 +566,7 @@
 				medidas.length
 					? `
           <div class="mt-3">
-            <div class="text-[11px] uppercase tracking-wider text-neutral-500 mb-1">Medidas</div>
+            <div class="text-[11px] uppercase tracking-wider text-neutral-500 mb-1">SIZES</div>
             <div class="flex flex-wrap gap-2">
               ${visibles
 								.map(
@@ -698,7 +698,7 @@
 
 						let headingContent = "Our Tires";
 						if (normalized && segmentLabels[normalized]) {
-							headingContent = `Catálogo dinámico <span class="block text-sm font-semibold tracking-wide text-[var(--brand-ink)]">${segmentLabels[normalized]}</span>`;
+							headingContent = `Our Tires <span class="block text-sm font-semibold tracking-wide text-[var(--brand-ink)]">${segmentLabels[normalized]}</span>`;
 						}
 
 						if (hasSizeFilter) {
@@ -811,7 +811,7 @@
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
-							<span class="f-chip">Since 1998</span>
+							<span class="f-chip"> </span>
 						</div>
 						<p class="text-white/70 text-sm mt-3 max-w-md">
 							Engineering, safety, and performance for every mile. MX & USA with
