--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 			header nav a:hover::after {
 				width: 24px;
 			}
+			@media (max-width: 1023px) {
+				header nav a {
+					text-align: left;
+				}
+				header nav a::after {
+					left: 0;
+					transform: translateX(0);
+				}
+			}
 		</style>
 		<style>
 			html {
@@ -78,10 +87,12 @@
 		<!-- TOP ICON STRIP -->
 		<div class="top-strip">
 			<div class="max-w-7xl mx-auto px-4">
-				<div class="flex items-center justify-between h-12">
+				<div
+					class="flex flex-col gap-3 py-3 sm:h-12 sm:flex-row sm:items-center sm:justify-between"
+				>
 					<!-- Selector de idioma -->
 					<div
-						class="inline-flex rounded-full border border-black/10 overflow-hidden"
+						class="inline-flex rounded-full border border-black/10 overflow-hidden self-center sm:self-auto"
 					>
 						<button
 							type="button"
@@ -106,7 +117,9 @@
 					</div>
 
 					<!-- Tus iconos (ahora a la derecha) -->
-					<div class="flex items-center gap-5 text-[var(--purple-1)]">
+					<div
+						class="flex items-center justify-center gap-5 text-[var(--purple-1)] sm:justify-end"
+					>
 						<!-- <button aria-label="Buscar" class="hover:opacity-80">
 							<i class="fa-solid fa-magnifying-glass text-xl"></i>
 						</button> -->
@@ -130,40 +143,81 @@
 		<!-- PURPLE RIBBON: logo centrado + menú -->
 		<header class="ribbon text-white">
 			<div class="max-w-7xl mx-auto px-4">
-				<div class="py-5 flex items-center justify-center">
+				<div
+					class="py-5 flex items-center justify-between gap-4 lg:justify-center"
+				>
 					<!-- Tu logotipo (centrado, proporción similar al screenshot) -->
 					<img
 						src="assets/img/logo.png"
 						alt="Brand"
 						class="h-12 md:h-14 w-auto"
 					/>
+					<button
+						type="button"
+						class="mobile-nav-toggle lg:hidden"
+						data-menu-toggle
+						aria-controls="siteMenu"
+						aria-expanded="false"
+					>
+						<span class="sr-only">Abrir menú</span>
+						<svg
+							class="icon-open"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="1.8"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<line x1="3" y1="6" x2="21" y2="6"></line>
+							<line x1="3" y1="12" x2="21" y2="12"></line>
+							<line x1="3" y1="18" x2="21" y2="18"></line>
+						</svg>
+						<svg
+							class="icon-close"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 24 24"
+							fill="none"
+							stroke="currentColor"
+							stroke-width="1.8"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<line x1="18" y1="6" x2="6" y2="18"></line>
+							<line x1="6" y1="6" x2="18" y2="18"></line>
+						</svg>
+					</button>
 				</div>
 				<nav
-					class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-x-12 gap-y-4 justify-items-center font-semibold tracking-wide uppercase text-sm pb-4"
+					id="siteMenu"
+					aria-label="Menú principal"
+					class="mobile-nav font-semibold tracking-wide uppercase text-sm lg:grid lg:grid-cols-5 lg:gap-x-12 lg:gap-y-4 lg:justify-items-center lg:pb-4"
+					data-menu
 				>
 					<a
 						href="#why-landscape-strength"
-						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
+						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Find Your Perfect Tire</a
 					>
 					<a
 						href="#tire-lineup"
-						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
+						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Tire Lineup</a
 					>
 					<a
 						href="#about"
-						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
+						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Why Landscape</a
 					>
 					<a
 						href="#corporate-news"
-						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
+						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>News</a
 					>
 					<a
 						href="#recruitment"
-						class="relative block max-w-[16ch] text-center leading-tight after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 hover:after:w-8 after:transition-all after:duration-300"
+						class="relative block max-w-none text-left leading-tight after:absolute after:left-0 after:-bottom-1 after:h-[2px] after:w-0 after:rounded-full after:bg-white/80 after:transition-all after:duration-300 hover:after:w-8 lg:text-center lg:max-w-[16ch] lg:after:left-1/2 lg:after:-translate-x-1/2"
 						>Join Landscape</a
 					>
 				</nav>
